# Saathvika-Ajith

./: .replit  README.md  _config.yml  aptest.md  code.md  evidence.md  index.md  main.py  notes.md  pyproject.toml  task.md
_includes/: head-custom2  navigation.html  repl.html
_layouts/: default.html
notWorking/: menuLazy.py
week1/: recurFactorial.py
week2/: classFactorial.py  factors.py  primes.py
week3/: icecream.py
working/: menuClassic.py
